--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "dependencies": {
     "@types/cookie-parser": "^1.4.3",
     "@types/dotenv": "^8.2.0",
+    "@types/multer": "^1.4.7",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.32.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "http-error": "^0.0.6",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.8.0",
     "sequelize": "^6.25.5",
     "sqlite3": "^5.1.2",
