--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "SQ12-P_FOOD-APP",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
   "scripts": {
     "start": "nodemon dist/app.js",
